tests/snapshots/snapshots__pipeline@neg_nonnumeric.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/neg_nonnumeric.pr
---
== tokens ==
VOpen Fn Ident("main") LParen RParen Colon KwUnit Bang LBrace UIdent("IO") RBrace Eq VOpen Let Ident("x") Eq Minus StringLit("hello") VSemi Ident("println") LParen Int(IntLit { value: 1, suffix: None }) RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "IO",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Let(
                    "x",
                    Spanned {
                        node: Neg(
                            Spanned {
                                node: Str(
                                    "hello",
                                ),
                                span: 115..122,
                            },
                        ),
                        span: 114..122,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 125..132,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 1,
                                            suffix: None,
                                        },
                                    ),
                                    span: 133..134,
                                },
                            ],
                        ),
                        span: 125..135,
                    },
                ),
                span: 106..135,
            },
            wheres: [],
            span: 78..135,
        },
    ],
}

== types ==
[E3012] Type Error: in `main`: no instance for Num(String)
   ╭─[ <source>:3:11 ]
   │
 3 │   let x = -"hello"
   │           ────┬───  
   │               ╰───── in `main`: no instance for Num(String)
───╯
